2006-01-26  Eric Seidel  <eseidel@apple.com>

        Adding additional test case from:
        http://bugzilla.opendarwin.org/show_bug.cgi?id=6801

        * svg/custom/percentage-rect2-expected.checksum: Added.
        * svg/custom/percentage-rect2-expected.png: Added.
        * svg/custom/percentage-rect2-expected.txt: Added.
        * svg/custom/percentage-rect2.svg: Added.

2006-01-26  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        * svg/custom/junk-data-expected.checksum:
        * svg/custom/junk-data-expected.png:
        * svg/custom/junk-data-expected.txt:
        * svg/custom/missing-xlink-expected.checksum:
        * svg/custom/missing-xlink-expected.png:
        * svg/custom/missing-xlink-expected.txt:
        * viewport-no-width-height.svg: Added.
        * viewport-no-width-height-expected.checksum: Added.
        * viewport-no-width-height-expected.png: Added.
        * viewport-no-width-height-expected.txt: Added.

2006-01-25  Alexander Kellett  <lypanov@kde.org>

        Reviewed by eseidel.

        Percentage values for width, height are not rendered correctly.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5331

        * svg/W3C-SVG-1.1/coords-units-01-b-expected.checksum:
        * svg/W3C-SVG-1.1/coords-units-01-b-expected.png:
        * svg/W3C-SVG-1.1/coords-units-02-b-expected.checksum:
        * svg/W3C-SVG-1.1/coords-units-02-b-expected.png:
        * svg/W3C-SVG-1.1/coords-units-02-b-expected.txt:
        * svg/W3C-SVG-1.1/coords-units-03-b-expected.checksum:
        * svg/W3C-SVG-1.1/coords-units-03-b-expected.png:
        * svg/W3C-SVG-1.1/coords-units-03-b-expected.txt:
        * svg/W3C-SVG-1.1/filters-blend-01-b-expected.txt:
        * svg/W3C-SVG-1.1/filters-color-01-b-expected.txt:
        * svg/W3C-SVG-1.1/filters-composite-02-b-expected.checksum:
        * svg/W3C-SVG-1.1/filters-composite-02-b-expected.png:
        * svg/W3C-SVG-1.1/filters-composite-02-b-expected.txt: